--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,154 @@
-body {
-  background-color: #999999;
-<<<<<<< HEAD
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("2364697-sedona-1/fonts/ptsans-400.woff2") format("woff2");
+  font-display: swap;
+}
 
-=======
->>>>>>> a26fcfcd085802e30b541e6c9c67f442c72bb0c3
+@font-face {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("2364697-sedona-1/fonts/ptsans-700.woff2") format("woff2");
+  font-display: swap;
+}
+
+body {
+  font-family: "PT Sans";
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  background-color: #f2f2f2;
+}
+
+.welcome {
+  background-image: url("../images/index-background.jpg");
+  background-repeat: no-repeat;
+}
+
+.button {
+  font-family: "PT Sans";
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFF;
+  background-color: #82B3D3;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.page-header {
+  color: #000000;
+  background-color: #FFF;
+}
+
+.navigation-link {
+  font-family: "PT Sans";
+  line-height: 24px;
+  font-weight: 700;
+  text-align: center;
+  color: #000000;
+  background-color: #f2f2f2;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.main-index {
+  color: #000000;
+  background-color: #f2f2f2;
+  background-image: url();
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+
+.advantages-list {
+  text-align: center;
+}
+
+.advantages-title {
+  font-family: "PT Sans";
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.index-columns {
+  color: #000000;
+  background-color: #82B3D3;
+  background-image: ;
+}
+
+.button {
+  font-family: "PT Sans";
+  font-size: 16px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFF;
+  background-color: #756157;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.appointment-title {
+  font-size: ;
+  line-height: ;
+  font-weight: ;
+  text-transform: uppercase;
+}
+
+.appointment-form {
+  color: #;
+}
+
+.form-label {
+  line-height: ;
+  font-weight: ;
+  text-transform: uppercase;
+}
+
+.contacts {
+  font-weight:
+}
+
+.contacts-title {
+  font-size: ;
+  line-height: ;
+  font-weight: ;
+  text-transform: uppercase;
+}
+
+.contacts-subtitle {
+  font-size: ;
+  line-height: ;
+  text-transform: uppercase;
+  color: #;
+}
+
+.contacts-phone {
+  font-size: ;
+  line-height: ;
+  text-decoration-line: ;
+  text-transform: uppercase;
+  color: #;
+}
+
+.page-footer {
+  font-size: ;
+  font-weight: ;
+  color: #;
+  background-color: #;
+  background-image: url("");
+  background-repeat: ;
+}
+
+.page-footer a {
+  color: #;
+}
+
+.page-footer .htmlacademy-link {
+  font-size: ;
+  color: #;
 }
