--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("2364697-sedona-1/fonts/ptsans-400.woff2") format("woff2");
+  src: url("../fonts/ptsans-400.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -10,7 +10,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("2364697-sedona-1/fonts/ptsans-700.woff2") format("woff2");
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -22,8 +22,84 @@ body {
   background-color: #f2f2f2;
 }
 
+.logo {
+  background-image: url("../images/logo.svg");
+  background-repeat: no-repeat;
+}
+
 .welcome {
   background-image: url("../images/index-background.jpg");
+  background-repeat: no-repeat;
+  display: block;
+  margin: 0 auto;
+}
+
+.navigation-item search {
+  background-image: url("../images/search.svg");
+  background-repeat: no-repeat;
+}
+
+.navigation-item favorites {
+  background-image: url("../images/heart.svg");
+  background-repeat: no-repeat;
+  height: 55;
+  width: 67;
+}
+
+.divider {
+  background-image: url("../images/divider.svg");
+  background-repeat: no-repeat;
+  height: 100;
+}
+
+.logo-living {
+  background-image: url("../images/аdvantage-icon.svg");
+  background-repeat: no-repeat;
+  height: 72;
+  width: 75;
+}
+
+.logo-food {
+  background-image: url("../images/аdvantage-icon-1.svg");
+  background-repeat: no-repeat;
+  height: 70;
+  width: 74;
+}
+
+.logo-souvenir {
+  background-image: url("../images/advantages-icon2.svg");
+  background-repeat: no-repeat;
+  height: 76;
+  width: 64;
+}
+
+.navigation-button-1 {
+    background-image: url("../images/view.svg");
+    background-repeat: no-repeat;
+}
+
+.navigation-button-2 {
+    background-image: url("../images/view-1.svg");
+    background-repeat: no-repeat;
+}
+
+.navigation-button-3 {
+    background-image: url("../images/view-2.svg");
+    background-repeat: no-repeat;
+}
+
+.аdvantages-title-living {
+  background-image: url("../images/аdvantage-icon.svg");
+  background-repeat: no-repeat;
+}
+
+.аdvantages-title-food {
+  background-image: url("../images/аdvantage-icon-1.svg");
+  background-repeat: no-repeat;
+}
+
+.advantages-title-souvenirs {
+  background-image: url("../images/advantages-icon2.svg");
   background-repeat: no-repeat;
 }
 
@@ -33,15 +109,31 @@ body {
   line-height: 20px;
   font-weight: 700;
   text-align: center;
-  color: #FFF;
-  background-color: #82B3D3;
+  color: #000000;
+  background-color: #e3c58d;
   text-decoration: none;
   text-transform: uppercase;
 }
 
+.divider {
+  background-image: url("../images/divider.svg");
+  background-repeat: no-repeat;
+}
+
+.home {
+  background-image: url("../images/logofoot.jpeg");
+  background-repeat: no-repeat;
+}
+
 .page-header {
   color: #000000;
-  background-color: #FFF;
+  background-color: #f2f2f2;
+}
+
+.navigation {
+  display: flex;
+  width: 940px;
+  margin: 0 auto;
 }
 
 .navigation-link {
@@ -55,6 +147,10 @@ body {
   text-transform: uppercase;
 }
 
+.main-container {
+  flex-grow: 1;
+}
+
 .main-index {
   color: #000000;
   background-color: #f2f2f2;
@@ -63,33 +159,36 @@ body {
   background-repeat: no-repeat;
 }
 
-.advantages-list {
-  text-align: center;
-}
-
-.advantages-title {
-  font-family: "PT Sans";
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
+.main-inner {
+  color: #;
+  background-color: #;
+  background-image: url("");
 }
 
 .index-columns {
-  color: #000000;
-  background-color: #82B3D3;
-  background-image: ;
+  color: #;
+  background-color: ;
+  background-image: url("");
 }
 
-.button {
-  font-family: "PT Sans";
-  font-size: 16px;
-  line-height: 36px;
-  font-weight: 700;
-  text-align: center;
-  color: #FFF;
-  background-color: #756157;
-  text-decoration: none;
+.services {
   text-transform: uppercase;
+}
+
+.services-title {
+  font-size: px;
+  line-height: px;
+  font-weight: ;
+}
+
+.services-list {
+  font-size: ;
+  line-height: ;
+  font-weight: ;
+}
+
+.services-price {
+  color: #;
 }
 
 .appointment-title {
@@ -103,14 +202,24 @@ body {
   color: #;
 }
 
+.star {
+  background-image: url("../images/star-3.svg");
+  background-repeat: no-repeat;
+}
+
 .form-label {
   line-height: ;
   font-weight: ;
   text-transform: uppercase;
 }
 
+.subscribe-form {
+  background-image: url("../images/logofoot.jpeg");
+  background-repeat: no-repeat;
+}
+
 .contacts {
-  font-weight:
+  font-weight: ;
 }
 
 .contacts-title {
@@ -144,11 +253,31 @@ body {
   background-repeat: ;
 }
 
-.page-footer a {
-  color: #;
+.logo-foot {
+  background-image: url("../images/logofoot.jpeg");
+  background-repeat: no-repeat;
 }
 
-.page-footer .htmlacademy-link {
-  font-size: ;
-  color: #;
+.footer-social-item-vk {
+  background-image: url("../images/social-2.svg");
+  background-repeat: no-repeat;
 }
+
+  .footer-social-item-tg {
+    background-image: url("../images/social-3.svg");
+    background-repeat: no-repeat;
+  }
+
+    .footer-social-item-yt {
+      background-image: url("../images/social-1.svg");
+      background-repeat: no-repeat;
+    }
+
+    .calendar {
+      background-image: url("../images/calendar.svg");
+      background-repeat: no-repeat;
+    }
+
+  .close {
+
+  }
