--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .navigation-link {
-  padding: ;
+  padding: 24px 19px;
   display: block;
   color: #000000;
   font-size: 0px;
@@ -55,6 +55,8 @@ body {
 }
 
 .navigation-link-text {
+  display: block;
+  padding: 24px 19px;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
@@ -104,6 +106,7 @@ body {
   font-style: normal;
   font-weight: 00;
   line-height: px;
+  list-style-type: none;
 }
 
 .logo {
@@ -115,8 +118,9 @@ body {
 }
 
 .welcome {
-  background-image: url("../images/index-background.jpg");
+  background-image: url("../images/divider.svg"), url("../images/index-background.jpg");
   background-repeat: no-repeat;
+  background-position: bottom, center;
   text-align: center;
 }
 
@@ -128,15 +132,8 @@ body {
 .navigation-item .favorites {
   background-image: url("../images/heart.svg");
   background-repeat: no-repeat;
-  min-height: 20px ;
+  min-height: 20px;
   width: 20px;
-}
-
-.divider {
-  background-image: url("../images/divider.svg");
-  background-repeat: no-repeat;
-  min-height: 0px;
-  margin-bottom: 0px;
 }
 
 .advantages-item-blue {
@@ -229,6 +226,10 @@ font-weight: 400;
 line-height: 26px;
 }
 
+.subtitle-text {
+color: ;
+}
+
 .services-item-1 {
 background-color: rgba(131, 179, 211, 0.12);
 background-image: url("../images/аdvantage-icon.svg");
@@ -265,6 +266,7 @@ background-image: url("../images/advantages-icon2.svg");
   padding-left: 0;
   margin: 0;
   margin-bottom: px;
+  list-style-type: none;
 }
 
 .services-list {
@@ -314,8 +316,10 @@ background-image: url(../images/viewlist1.svg);
 .advantages-item {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0;
-  margin: 0;
+  padding-left: 0px;
+  margin: 0px;
+  text-align: center;
+  list-style-type: none;
 }
 
 .аdvantages-title {
@@ -328,6 +332,7 @@ background-image: url(../images/viewlist1.svg);
   text-transform: uppercase;
   width: 400px;
   color: #000000;
+  list-style-type: none;
 }
 
 .advantages-item-title {
@@ -337,6 +342,7 @@ background-image: url(../images/viewlist1.svg);
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .аdvantages-title-food {
@@ -377,6 +383,15 @@ background-image: url(../images/viewlist1.svg);
   align-content: stretch;
   padding-left: 70px;
   padding-right: 70px;
+  list-style-type: none;
+}
+
+.pages {
+
+}
+
+.views {
+  list-style-type: none;
 }
 
 .hotel-card {
@@ -399,6 +414,7 @@ background-image: url(../images/viewlist1.svg);
 
 .button-brown {
   font-family: "PT Sans";
+  font-style: normal;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
@@ -409,6 +425,15 @@ background-image: url(../images/viewlist1.svg);
   margin-top: 30px;
   border-radius: 4px;
   background-color: #756157;
+  padding-left: 50px;
+  padding-top: 8px;
+  padding-right: 50px;
+  padding-bottom: 8px;
+}
+
+.appointment-button {
+  font-size: 20px;
+  line-height: 36px;
 }
 
 .button-blue {
@@ -424,6 +449,11 @@ background-image: url(../images/viewlist1.svg);
   margin-top: 30px;
   border-radius: 4px;
   background-color: #82B3D3;
+  outline: none;
+  padding-left: 50px;
+  padding-top: 8px;
+  padding-right: 50px;
+  padding-bottom: 8px;
 }
 
 .button-green {
@@ -439,6 +469,10 @@ background-image: url(../images/viewlist1.svg);
   margin-top: 30px;
   border-radius: 4px;
   background-color: #7DB54F;
+  padding-left: 50px;
+  padding-top: 8px;
+  padding-right: 50px;
+  padding-bottom: 8px;
 }
 
 .appointment-button {
@@ -453,6 +487,53 @@ background-image: url(../images/viewlist1.svg);
   margin-top: 30px;
   border-radius: 4px;
   background-color: #756157;
+  padding-left: 50px;
+  padding-top: 8px;
+  padding-right: 50px;
+  padding-bottom: 8px;
+}
+
+.reset-button {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 30px;
+  border-radius: 4px;
+  padding-left: 50px;
+  padding-top: 8px;
+  padding-right: 50px;
+  padding-bottom: 8px;
+  display: inline-block;
+  width: 200px;
+  padding: 8px;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+}
+
+.search-button {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-top: 30px;
+  border-radius: 4px;
+  background-color: #82B3D3;
+  outline: none;
+  padding-left: 230px;
+  padding-top: 12px;
+  padding-right: 230px;
+  padding-bottom: 12px;
 }
 
 .services-title {
@@ -514,6 +595,12 @@ padding-left: 400px;
   background-repeat: no-repeat;
 }
 
+.subscribe-background {
+  background-color: #82B3D3;
+  color: #ffffff;
+  background-image: url("../images/subscribe-foot.svg");
+}
+
 .subscribe-2 {
   min-height: 300px;
   line-height: 40px;
@@ -534,16 +621,6 @@ padding-left: 400px;
   flex-wrap: wrap;
   padding-left: 0;
   margin: 0;
-}
-
-.divider {
-  background-image: url("../images/divider.svg");
-  background-repeat: no-repeat;
-}
-
-.home {
-  background-image: url("../images/logofoot.jpeg");
-  background-repeat: no-repeat;
 }
 
 .page-header {
@@ -640,11 +717,16 @@ padding-left: 400px;
   text-transform: lowercase;
 }
 
+.close {
+  background-image: url("../images/cross.svg");
+}
+
 .pagination {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   margin: 0;
+  list-style-type: none;
 }
 
 .contacts {
@@ -675,11 +757,20 @@ padding-left: 400px;
   color: #000000;
   background-color: #;
   background-image: url("");
-  background-repeat: ;
+  background-repeat: no-repeat;
   padding-left: 30px;
   padding-top: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
+  list-style-type: none;
+}
+
+.footer-social {
+
+}
+
+.footer-social-list {
+
 }
 
 .logo-foot {
@@ -742,4 +833,23 @@ padding-left: 400px;
       font-weight: 700px;
       color: #000000;
       text-transform: uppercase;
+    }
+
+    .page-title {
+      color: #ffffff;
+      font-size: 60px;
+      line-height: 78px;
+    }
+
+    .filter {
+      background-color: #ffffff;
+      background-image: url("../images/logofoot.jpeg");
+      background-repeat: no-repeat;
+    }
+
+    .breadcrumbs-item {
+      color: #ffffff;
+      font-size: 16px;
+      line-height: 21px;
+      list-style-type: none;
     }
